<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/container">

    <include
        layout="@layout/view_picture_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@id/layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="@dimen/margin_small"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />

                <ImageButton
                    android:id="@+id/photo_view_button"
                    android:layout_width="@dimen/round_button_small"
                    android:layout_height="@dimen/round_button_small"
                    android:layout_marginStart="@dimen/margin_toolbar_swip_camera_view"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/gallery_button_alt"
                    android:padding="@dimen/padding"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_photo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />


                <!-- Camera control and gallery buttons -->
                <ImageButton
                    android:id="@+id/camera_switch_button"
                    android:layout_width="@dimen/round_button_medium"
                    android:layout_height="@dimen/round_button_medium"
                    android:layout_marginStart="@dimen/margin_small"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/switch_camera_button_alt"
                    android:padding="@dimen/padding"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:srcCompat="@drawable/ic_switch" />


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.camera.view.PreviewView
            android:id="@+id/view_finder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_centerInParent="true"
            android:background="@android:color/black"
            android:elevation="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_toStartOf="@id/button"
                android:background="@android:color/transparent"
                android:padding="@dimen/padding"
                android:text="@string/say_cheese"
                android:textSize="@dimen/text_size_mic" />

            <ImageButton
                android:id="@+id/button"
                android:layout_width="@dimen/round_button_medium"
                android:layout_height="@dimen/round_button_medium"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium"
                android:background="@android:color/transparent"
                android:paddingEnd="@dimen/padding"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_mic" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>