<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding"
    android:background="@android:color/white">


    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_code"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <EditText
        android:id="@+id/enterCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/margin_medium"
        android:autofillHints="eg:-89764"
        android:ems="10"
        android:hint="@string/enter_security_code"
        android:inputType="numberPassword"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/note"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/note_keep_this_code_handy_unless_you_cann_t_be_able_to_recover_your_encrypted_image"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterCode"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note"
        app:layout_constraintVertical_bias="0.100000024"
        android:layout_marginEnd="@dimen/margin">

        <Button
            android:id="@+id/cancel2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@android:string/no"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ok2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

        <Button
            android:id="@+id/ok2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@android:string/yes"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>